chore(error-prone): cleanup DefaultCharset warnings, UnsupportedEncodingException #8338
- clean UnsupportedEncodingExceptions: it's applicable only when passing charset as String
- update deprecated Constants.DEFAULT_ENCODING to StandardCharsets.UTF_8